--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -507,3 +507,46 @@
     keywords = {RDMA, ROCE, infiniband, key-value stores},
 } 
 
+@misc{cityhash,
+    author={G. Pike and J. Alakuijala},
+    title={{The CityHash family of hash functions (2011)}},
+    month=aug,
+    year=2017,
+    howpublished={\url{http://code.google.com/p/cityhash}}
+}
+
+
+@misc{uthash,
+  author={Troy D. Hanson and Arthur O'Dwyer},
+  title={{uthash User Guide}},
+  month=aug,
+  year=2017,
+  howpublished={\url{http://troydhanson.github.io/uthash/userguide.html} } 
+}
+
+@inproceedings{comhpc16,
+ author = {Larkins, D. Brian and Dinan, James},
+ title = {Extending a Message Passing Runtime to Support Partitioned, Global Logical Address Spaces},
+ booktitle = {Proceedings of the First Workshop on Optimization of Communication in HPC},
+ series = {COM-HPC '16},
+ year = {2016},
+ isbn = {978-1-5090-3829-9},
+ location = {Salt Lake City, Utah},
+ pages = {11--16},
+ numpages = {6},
+ url = {https://doi.org/10.1109/COM-HPC.2016.7},
+ doi = {10.1109/COM-HPC.2016.7},
+ acmid = {3018060},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+ keywords = {PGAS, offload, parallel hash table, portals},
+}
+
+
+@inproceedings{thornton09,
+    title={{Introducing the MADNESS numerical framework for petascale computing}},
+    author={Thornton, W Scott and Vence, Nicholas and Harrison, Robert},
+    booktitle = {Proc. Cray Users Group},
+    series = {CUG '09},
+    year   = {2009}
+}
