--- a/doc/paper17/abstract.tex
+++ b/doc/paper17/abstract.tex
@@ -1,12 +1,24 @@
 \begin{abstract}
-This is an abstract abstract. This is totally a placeholder that is
-just designed to take up approximately the correct amount of space on
-the page. This will totally need to be re-written before we really get
-anywhere with it. I just checked and it's only at about 50 words right
-now. I need to come up with about another fifty words or so until I
-can get back to writing the introduction. 86. That's not quite
-100. We can put another fourteen words to paper, at which point it
-will be deemed ``sufficiently long''.  This should just about do it.
+
+  Many HPC applications rely on Partitioned Global Address Space (PGAS)
+  parallel programming models as a means to efficiently manage shared
+  data located across multiple nodes in a distributed memory system.
+  These models are typically directly addressed which may render them
+  difficult to use with loosely-structured or sparse data. Locating 
+  a given data element with a PGAS can be a complex process with 
+  substantial overhead. Additional overhead may be incurred by performing
+  lookups from remote location resolution structures. Additionally,
+  large data structures may consume memory and create coherence
+  problems that may limit scalability.
+
+  We propose that the matching systems used by implementations of the Message
+  Passing Interface (MPI) can be used to create a separation between 
+  write operations and the physical location that data is stored. This work
+  explores the extension of such structures to establish an indirection
+  layer between incoming read operations and the physical location of the
+  requested object, thereby effectively extending PGAS models with support
+  for logical addressing.
+
 \end{abstract}
 
 %%% Local Variables:
