commit references to new latency numbers
change flag for local matchlist searching
clean up scaling with some different timing


Former-commit-id: afbcdf5c95a31ebbdd7b1276d453d5abb7c0aa6c

--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -32,7 +32,7 @@
 %\lstloadlanguages{C}
 \pagestyle{empty}
 
-\title{Hardware Accelerated Distributed Hash Tables}
+%\title{Efficient Runtime Support for a Partitioned Global Logical Address Space}
 
 % \author{
 % %\begin{normalsize}
@@ -58,9 +58,8 @@
   pdfborder={0 0 0},
   colorlinks=false,
   pdfpagelabels=false,
-  pdftitle={Extending a Message Passing Runtime to Support
-    Partitioned, Global Logical Address Spaces},
-  pdfauthor={D. Brian Larkins and James Dinan},
+  pdftitle={Efficient Runtime Support for a Partitioned Global Logical Address Space},
+  pdfauthor={D. Brian Larkins, John Snyder, and James Dinan},
   pdfsubject={},
   pdfkeywords={},
   bookmarks=false,
@@ -80,7 +79,7 @@
 \begin{document}
 \IEEEoverridecommandlockouts
 % Title portion
-\title{Hardware Accelerated Distributed Hash Tables}
+\title{Efficient Runtime Support for a Partitioned Global Logical Address Space}
 \author{\IEEEauthorblockN{D. Brian Larkins\IEEEauthorrefmark{1}, John Snyder\IEEEauthorrefmark{2}}
 \IEEEauthorblockA{Rhodes College}
 \IEEEauthorblockA{Memphis, TN}
