--- a/doc/paper17/results.tex
+++ b/doc/paper17/results.tex
@@ -75,8 +75,15 @@ visited before finding a match.
 
 \begin{figure}[ht]
   \center
-  \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
-  \caption{PDHT Access Latency ($\mu$sec)}
+  \includegraphics[width=.95\linewidth]{plots/pdhtlatency}
+  \caption{PDHT Access Latencies ($\mu$sec)}
+  \label{fig:6}
+\end{figure}
+
+\begin{figure}[ht]
+  \center
+  \includegraphics[width=.95\linewidth]{plots/mpilatency}
+  \caption{PDHT and MPI Access Latency ($\mu$sec)}
   \label{fig:6}
 \end{figure}
 
