First stab at updating the introduction
Signed-off-by: James Dinan <james.dinan@intel.com>

Former-commit-id: f4ae5597c2d7c140cda230d8b3553f729f3dd38f

--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -550,3 +550,55 @@
     series = {CUG '09},
     year   = {2009}
 }
+
+@inproceedings{kamil:14,
+ author = {Kamil, Amir and Zheng, Yili and Yelick, Katherine},
+ title = {A Local-View Array Library for Partitioned Global Address Space C++ Programs},
+ booktitle = {Proceedings of ACM SIGPLAN International Workshop on Libraries, Languages, and Compilers for Array Programming},
+ series = {ARRAY'14},
+ year = {2014},
+ isbn = {978-1-4503-2937-8},
+ location = {Edinburgh, United Kingdom},
+ pages = {26:26--26:31},
+ articleno = {26},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2627373.2627378},
+ doi = {10.1145/2627373.2627378},
+ acmid = {2627378},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{ddi,
+    title = {The Distributed Data Interface in {GAMESS}},
+    author = {Graham D. Fletcher and Michael W. Schmidt and Brett M. Bodec and Mark S. Gordon},
+    journal = {Computer Physics Communications},
+    volume = {128},
+    issue = {1-2},
+    pages = {190-200},
+    date  = {9},
+    month = jun,
+    year  = 2000
+}
+
+@techreport{fortran-2008,
+    type = {Standard},
+    key = {SO/IEC 1539-1:2010},
+    month = oct,
+    year = {2010},
+    title = {{Information technology -- Programming languages -- Fortran -- Part 1: Base language}},
+    address = {Geneva, CH},
+    institution = {International Organization for Standardization}
+}
+
+@article{niu:16,
+    author = {Qingpeng Niu and James Dinan and Sravya Tirukkovalur and Anouar Benali and Jeongnim Kim and Lubos Mitas and Lucas Wagner and P. Sadayappan},
+    title = {Global-view coefficients: a data management solution for parallel quantum Monte Carlo applications},
+    journal = {Concurrency and Computation: Practice and Experience},
+    volume = {28},
+    number = {13},
+    pages = {3655-3671},
+    doi = {10.1002/cpe.3748},
+    month = jan,
+    year = 2016
+}
