--- a/doc/paper17/introduction.tex
+++ b/doc/paper17/introduction.tex
@@ -1,26 +1,30 @@
 \section{Introduction}
 
-% high-level -> optimizing systems to permit high-performance within
-% context of high core-count hardware
+Partitioned Global Address Space (PGAS) parallel programming models, such as
+OpenSHMEM~\cite{openshmem-1.3}, Unified Parallel C~\cite{upc-13-spec}, Fortran
+2008 Coarrays~\cite{reid:08,fortran-2008}, and the MPI Remote Memory Access
+(RMA) interface MPI~\cite{mpi-forum:15}, have become popular as a means for
+supporting distributed, shared global data.  In particular, PGAS models have
+been shown to be especially effective when used to store dense arrays and
+several models have been designed to support this type of
+data~\cite{ga,kamil:14,ddi,niu:16}.
 
-Recent trends in high-performance hardware design have led to a
-dramatic increase in processor core count. While these advances have
-increased the capability of high-performance computing (HPC) systems,
-they have also introduced new challenges. With higher processor core
-density comes greater contention for memory and a renewed interest
-in memory-efficient sparse data structures as well as Partitioned 
-Global Address Space (PGAS) parallel programming models.
+While PGAS models are commonly used with regularly structured data, they have
+had limited success with irregular and sparse data.  Such data structures are
+accessed indirectly and an additional indexing operation is needed to resolve
+the location of a data element.  Indexing structures grow proportional to the
+data size, for the large data volumes that necessitate a PGAS solution, these
+structures must also be distributed.  Thus, resolving the index of a data item
+within the global address space is not possible using only local information.
 
-Many parallel programming frameworks support PGAS memory models, 
-including OpenSHMEM~\cite{openshmem-1.3}, Unified Parallel 
-C~\cite{upc-13-spec}, Fortran 2008 Coarrays~\cite{reid:08}, and 
-the Remote Memory Access (RMA) interface, supported within 
-MPI~\cite{mpi-forum:15}.
-
-% PGAS -> provides more memory
-%   great for dense, hard for sparse
-PGAS programming models help address memory contention by permitting 
-one-sided access to large distributed data structures. 
+Remote direct memory access (RDMA) read, write, and atomic update operations
+are commonly supported by the high-speed fabrics used to construct HPC systems
+and these operations are used to accelerate remote access operations performed
+by PGAS models.  RDMA operations map well to remote array access operations,
+since the locations to be accessed can be determined at the initiator of the
+operation.  However, the indirection required to remotely access sparse or
+irregularly structured data presents challenges to existing RDMA interfaces
+and can result in significant overheads.
 
 % many applications that use sparse data structures are naturally expressed
 % using logical addresses, such as a coordinate/level system in a spatial
@@ -75,14 +79,6 @@ one-sided access to large distributed data structures.
 %    to phys addr reduces the likelihood for collisions vs
 %    a conventional hash table structure
 
-
-Greater contention for memory resources is a well-studied
-consequence of higher core counts. Likewise, access to the
-interconnect can also be a bottleneck, greatly limiting overall system
-communication throughput. To remedy this problem, several approaches
-aim to address network interface contention by providing
-hardware-based solutions that offload communication
-processing. 
 
 Recent updates to the Portals 4.0 communications interface provide
 additions to a well-known interconnect programming model that permits
